--- a/index.html
+++ b/index.html
@@ -327,6 +327,16 @@
           <p>
             <a
               class="instagram-icon"
+              href="https://wa.me/31683112239"
+              target="_blank"
+            >
+              <img src="img/whatsapp.svg" alt="Whatsapp" class="social-icon" />
+            </a>
+            Telefoon: 06 83112239
+          </p>
+          <p>
+            <a
+              class="instagram-icon"
               href="https://g.co/kgs/ufyRsAV"
               target="_blank"
             >
