--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
     <!-- Content secties -->
     <div class="section section-one">
       <video autoplay muted loop class="background-video">
-        <source src="img/flawlessbeauty.mp4" type="video/mp4" />
+        <source src="img/flawlessbeauty.webm" type="video/webm" />
         Your browser does not support the video tag.
       </video>
     </div>
@@ -308,8 +308,6 @@
       </div>
     </div>
 
-    <!-- Footer -->
-    <!-- Footer -->
     <footer class="footer">
       <div class="footer-container">
         <div class="footer-left">
