--- a/index.html
+++ b/index.html
@@ -57,7 +57,14 @@
 
     <!-- Content secties -->
     <div class="section section-one">
-      <video autoplay muted loop class="background-video">
+      <video
+        autoplay
+        muted
+        loop
+        playsinline
+        preload="auto"
+        class="background-video"
+      >
         <source src="img/flawlessbeauty.webm" type="video/webm" />
         Your browser does not support the video tag.
       </video>
