--- a/index.html
+++ b/index.html
@@ -233,7 +233,7 @@
       </div>
     </div>
 
-    <div class="section section-three">
+    <div id="prijslijst" class="section section-three">
       <div class="prijslijst-container">
         <div class="prijslijst-left">
           <h2>Prijslijst</h2>
@@ -276,7 +276,7 @@
       </div>
     </div>
 
-    <div class="section section-four">
+    <div id="over-mij" class="section section-four">
       <svg
         viewBox="0 0 3840 96"
         preserveAspectRatio="none"
@@ -315,7 +315,7 @@
       </div>
     </div>
 
-    <footer class="footer">
+    <footer id="contact" class="footer">
       <div class="footer-container">
         <div class="footer-left">
           <h3>Contact</h3>
