Smooth scroll & website icon

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <link href="css/section5.css" rel="stylesheet" />
     <link href="css/navbar.css" rel="stylesheet" />
     <link href="css/main.css" rel="stylesheet" />
+    <link rel="icon" type="image/png" href="img/thumbnail_flawlessbeauty.png" />
     <script src="js/introloader.js"></script>
     <script src="js/slideshow.js"></script>
     <script src="js/showtext.js"></script>
@@ -32,6 +33,11 @@
         }
       }
     </script>
+    <style>
+      html {
+        scroll-behavior: smooth;
+      }
+    </style>
   </head>
   <body>
     <div id="intro" class="intro">
@@ -73,7 +79,7 @@
     <div class="section section-welcome">
       <div class="welcome-container">
         <div class="welcome-text">
-          <h1>Welkom bij Flawlessbeauty</h1>
+          <h1>Welkom bij Flawless Beauty</h1>
           <p>Het adres voor de mooiste nagels!</p>
         </div>
       </div>
