--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
       <div class="welcome-container">
         <div class="welcome-text">
           <h1>Welkom bij Flawless Beauty</h1>
-          <p>Het adres voor de mooiste nagels!</p>
+          <p>Hét adres voor de mooiste nagels!</p>
         </div>
       </div>
       <svg
@@ -280,34 +280,42 @@
         <div class="prijslijst-right">
           <ul class="price-list">
             <li>
-              <span>BIAB treatment & manicure</span
+              <span class="treatment">BIAB treatment & manicure</span
               ><span class="price">€40,-</span>
             </li>
             <li>
-              <span>BIAB treatment & manicure + gelpolish</span
+              <span class="treatment"
+                >BIAB treatment & manicure + gelpolish</span
               ><span class="price">€45,-</span>
             </li>
             <li>
-              <span>Nailextensions & manicure</span
+              <span class="treatment">Nailextensions & manicure</span
               ><span class="price">€55,-</span>
             </li>
             <li>
-              <span>Nailextensions & manicure + gelpolish</span
+              <span class="treatment"
+                >Nailextensions & manicure + gelpolish</span
               ><span class="price">€60,-</span>
             </li>
             <li>
-              <span>Gelpolish & manicure</span><span class="price">€25,-</span>
-            </li>
-            <li><span>Nailart</span><span class="price">€5,-</span></li>
-            <li>
-              <span>BIAB verwijderen</span><span class="price">€10,-</span>
+              <span class="treatment">Gelpolish & manicure</span
+              ><span class="price">€25,-</span>
             </li>
             <li>
-              <span>Nailextensions verwijderen</span
+              <span class="treatment">Nailart</span
+              ><span class="price">€5,-</span>
+            </li>
+            <li>
+              <span class="treatment">BIAB verwijderen</span
+              ><span class="price">€10,-</span>
+            </li>
+            <li>
+              <span class="treatment">Nailextensions verwijderen</span
               ><span class="price">€15,-</span>
             </li>
             <li>
-              <span>Gellak verwijderen</span><span class="price">€7,50</span>
+              <span class="treatment">Gellak verwijderen</span
+              ><span class="price">€7,50</span>
             </li>
           </ul>
         </div>
@@ -402,13 +410,20 @@
                 class="social-icon"
               />
             </a>
+            <a
+              class="instagram-icon"
+              href="https://www.facebook.com/profile.php?id=61564057466537&locale=nl_NL"
+              target="_blank"
+            >
+              <img src="img/facebook.svg" alt="facebook" class="social-icon" />
+            </a>
           </div>
         </div>
         <div class="footer-right">
           <h3>Openingstijden</h3>
           <p><span>Maandag:</span><span class="time">19:00 - 22:00</span></p>
           <p><span>Dinsdag:</span><span class="time">19:00 - 22:00</span></p>
-          <p><span>Woensdag:</span><span class="time">19:00 - 22:00</span></p>
+          <p><span>Woensdag:</span><span class="time">Gesloten</span></p>
           <p><span>Donderdag:</span><span class="time">19:00 - 22:00</span></p>
           <p><span>Vrijdag:</span><span class="time">19:00 - 22:00</span></p>
           <p><span>Zaterdag:</span><span class="time">Gesloten</span></p>
