--- a/index.html
+++ b/index.html
@@ -95,17 +95,24 @@
 
     <!-- Content secties -->
     <div class="section section-one">
-      <video
-        autoplay
-        muted
-        loop
-        playsinline
-        preload="auto"
-        class="background-video"
-      >
-        <source src="img/flawlessbeauty.webm" type="video/webm" />
-        Your browser does not support the video tag.
-      </video>
+        <video autoplay
+               muted
+               loop
+               playsinline
+               preload="auto"
+               class="background-video video-pc">
+            <source src="img/flawlessbeauty.webm" type="video/webm" />
+            Your browser does not support the video tag.
+        </video>
+        <video autoplay
+               muted
+               loop
+               playsinline
+               preload="auto"
+               class="background-video video-mobile">
+            <source src="img/flawlessbeauty-vertical.webm" type="video/webm" />
+            Your browser does not support the video tag.
+        </video>
     </div>
 
     <div class="section section-welcome">
