--- a/index.html
+++ b/index.html
@@ -163,28 +163,28 @@
 
           <!-- BIAB Section -->
           <div class="treatment-section">
-            <h3
-              onclick="toggleDescription('biab-description')"
-              class="treatment-title"
-            >
-              BIAB (Natural Nail Treatment)
-            </h3>
-            <p id="biab-description" class="treatment-description">
-              <strong>BIAB treatment & manicure</strong><br />
-              De natuurlijke nagels worden verstevigd met een gel product. Op de
-              afspraak bekijk ik of ik ga werken met een soft gel (zacht
-              product) of een hard gel (hard product), dit is afhankelijk van de
-              natuurlijke nagel. De nagelriemen worden behandeld doormiddel van
-              een manicure. Deze behandeling is ZONDER gelpolish en er wordt
-              gewerkt op de lengte van de natuurlijke nagel.<br /><br />
-              <strong>BIAB treatment & manicure + gelpolish</strong><br />
-              De natuurlijke nagels worden verstevigd met een gel product. Op de
-              afspraak bekijk ik of ik ga werken met een soft gel (zacht
-              product) of een hard gel (hard product), dit is afhankelijk van de
-              natuurlijke nagel. De nagelriemen worden behandeld doormiddel van
-              een manicure. Deze behandeling is MET gelpolish en er wordt
-              gewerkt op de lengte van de natuurlijke nagel.
-            </p>
+              <h3 onclick="toggleDescription('biab-description')"
+                  class="treatment-title">
+                  BIAB (Natural Nail Treatment)
+              </h3>
+              <p id="biab-description" class="treatment-description">
+                  <img src="img/biab.png" class="mini-picture-treatment" />
+                  <br />
+                  <strong>BIAB treatment & manicure</strong><br />
+                  De natuurlijke nagels worden verstevigd met een gel product. <br />Op de
+                  afspraak bekijk ik of ik ga werken met een soft gel (zacht
+                  product) of een hard gel (hard product), dit is afhankelijk van de
+                  natuurlijke nagel. <br />De nagelriemen worden behandeld doormiddel van
+                  een manicure. Deze behandeling is ZONDER gelpolish en er wordt
+                  gewerkt op de lengte van de natuurlijke nagel.<br /><br />
+                  <strong>BIAB treatment & manicure + gelpolish</strong><br />
+                  De natuurlijke nagels worden verstevigd met een gel product. <br />Op de
+                  afspraak bekijk ik of ik ga werken met een soft gel (zacht
+                  product) of een hard gel (hard product), dit is afhankelijk van de
+                  natuurlijke nagel. <br />De nagelriemen worden behandeld doormiddel van
+                  een manicure. Deze behandeling is MET gelpolish en er wordt
+                  gewerkt op de lengte van de natuurlijke nagel.
+              </p>
           </div>
 
           <div class="treatment-section">
