nailart en nailextensions

--- a/index.html
+++ b/index.html
@@ -95,24 +95,28 @@
 
     <!-- Content secties -->
     <div class="section section-one">
-        <video autoplay
-               muted
-               loop
-               playsinline
-               preload="auto"
-               class="background-video video-pc">
-            <source src="img/flawlessbeauty.webm" type="video/webm" />
-            Your browser does not support the video tag.
-        </video>
-        <video autoplay
-               muted
-               loop
-               playsinline
-               preload="auto"
-               class="background-video video-mobile">
-            <source src="img/flawlessbeauty-vertical.webm" type="video/webm" />
-            Your browser does not support the video tag.
-        </video>
+      <video
+        autoplay
+        muted
+        loop
+        playsinline
+        preload="auto"
+        class="background-video video-pc"
+      >
+        <source src="img/flawlessbeauty.webm" type="video/webm" />
+        Your browser does not support the video tag.
+      </video>
+      <video
+        autoplay
+        muted
+        loop
+        playsinline
+        preload="auto"
+        class="background-video video-mobile"
+      >
+        <source src="img/flawlessbeauty-vertical.webm" type="video/webm" />
+        Your browser does not support the video tag.
+      </video>
     </div>
 
     <div class="section section-welcome">
@@ -163,28 +167,30 @@
 
           <!-- BIAB Section -->
           <div class="treatment-section">
-              <h3 onclick="toggleDescription('biab-description')"
-                  class="treatment-title">
-                  BIAB (Natural Nail Treatment)
-              </h3>
-              <p id="biab-description" class="treatment-description">
-                  <img src="img/biab.png" class="mini-picture-treatment" />
-                  <br />
-                  <strong>BIAB treatment & manicure</strong><br />
-                  De natuurlijke nagels worden verstevigd met een gel product. <br />Op de
-                  afspraak bekijk ik of ik ga werken met een soft gel (zacht
-                  product) of een hard gel (hard product), dit is afhankelijk van de
-                  natuurlijke nagel. <br />De nagelriemen worden behandeld doormiddel van
-                  een manicure. Deze behandeling is ZONDER gelpolish en er wordt
-                  gewerkt op de lengte van de natuurlijke nagel.<br /><br />
-                  <strong>BIAB treatment & manicure + gelpolish</strong><br />
-                  De natuurlijke nagels worden verstevigd met een gel product. <br />Op de
-                  afspraak bekijk ik of ik ga werken met een soft gel (zacht
-                  product) of een hard gel (hard product), dit is afhankelijk van de
-                  natuurlijke nagel. <br />De nagelriemen worden behandeld doormiddel van
-                  een manicure. Deze behandeling is MET gelpolish en er wordt
-                  gewerkt op de lengte van de natuurlijke nagel.
-              </p>
+            <h3
+              onclick="toggleDescription('biab-description')"
+              class="treatment-title"
+            >
+              BIAB (Natural Nail Treatment)
+            </h3>
+            <p id="biab-description" class="treatment-description">
+              <img src="img/biab.png" class="mini-picture-treatment" />
+              <br />
+              <strong>BIAB treatment & manicure</strong><br />
+              De natuurlijke nagels worden verstevigd met een gel product.
+              <br />Op de afspraak bekijk ik of ik ga werken met een soft gel
+              (zacht product) of een hard gel (hard product), dit is afhankelijk
+              van de natuurlijke nagel. <br />De nagelriemen worden behandeld
+              doormiddel van een manicure. Deze behandeling is ZONDER gelpolish
+              en er wordt gewerkt op de lengte van de natuurlijke nagel.<br /><br />
+              <strong>BIAB treatment & manicure + gelpolish</strong><br />
+              De natuurlijke nagels worden verstevigd met een gel product.
+              <br />Op de afspraak bekijk ik of ik ga werken met een soft gel
+              (zacht product) of een hard gel (hard product), dit is afhankelijk
+              van de natuurlijke nagel. <br />De nagelriemen worden behandeld
+              doormiddel van een manicure. Deze behandeling is MET gelpolish en
+              er wordt gewerkt op de lengte van de natuurlijke nagel.
+            </p>
           </div>
 
           <div class="treatment-section">
@@ -199,6 +205,11 @@
               class="treatment-description"
               style="display: none"
             >
+              <img
+                src="img/nailextensions.jpg"
+                class="mini-picture-treatment"
+              />
+              <br />
               <strong>Nail extensions & manicure</strong><br />
               De natuurlijke nagels worden verlengd met gel, op de afspraak kijk
               ik of ik met sjablonen ga werken of upperforms, afhankelijk van de
@@ -243,6 +254,8 @@
               class="treatment-description"
               style="display: none"
             >
+              <img src="img/nailart.jpeg" class="mini-picture-treatment" />
+              <br />
               Deze behandeling kunt u boeken als extra bij een BIAB,
               Nailextensions of Gelpolish behandeling. Denk aan bijvoorbeeld een
               frenchtip of een babyboom.
