--- a/index.html
+++ b/index.html
@@ -254,6 +254,7 @@
               class="treatment-description"
               style="display: none"
             >
+              <img src="img/nagels1.jpeg" class="mini-picture-treatment" />
               <img src="img/nailart.jpeg" class="mini-picture-treatment" />
               <br />
               Deze behandeling kunt u boeken als extra bij een BIAB,
