--- a/index.html
+++ b/index.html
@@ -56,12 +56,6 @@
       html {
         scroll-behavior: smooth;
       }
-
-      .soon {
-        width: 100vw;
-        height: 100vh;
-        object-fit: cover;
-      }
     </style>
   </head>
   <body>
@@ -69,8 +63,7 @@
       <img src="img/logozwart.svg" alt="Logo" class="intro-logo" />
     </div>
 
-    <img src="img/soon-mobile.jpeg" alt="Logo" class="soon" />
-    <!-- <nav class="navbar">
+    <nav class="navbar">
       <div class="container">
         <div class="menu-left">
           <a href="#behandelingen">Behandelingen</a>
@@ -466,6 +459,6 @@
       data-position="right"
       data-outline="shadow"
     ></div>
-    <script src="https://static-widget.salonized.com/loader.js"></script> -->
+    <script src="https://static-widget.salonized.com/loader.js"></script>
   </body>
 </html>
